fixed the spacing of the intro paragraph

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@
     font-size: 3.5rem;
     -webkit-transform: scaleY(0.8);
     transform: scaleY(0.8);
-    margin-top: -1.1rem;
+    margin-top: -0.8rem;
 }
 
 .site .background__content .background__home--p3 {
